--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "paper-tennis",
   "version": "0.0.0",
   "description": "Game of paper tennis",
-  "main": "app.js",
+  "main": "src/main.js",
   "scripts": {
     "test": "test"
   },
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/djaney/paper-tennis/issues"
   },
-  "homepage": "https://github.com/djaney/paper-tennis#readme"
+  "homepage": "https://github.com/djaney/paper-tennis#readme",
+  "dependencies": {
+    "express": "~4.14.0",
+    "socket.io": "~1.4.8"
+  }
 }
